# squadvault

./: .gitignore  CLAUDE.md  Makefile  OBSERVATIONS_2026_04_15_D12_FINDING1_RESOLUTION.md  OBSERVATIONS_2026_04_15_STREAK_D12_PROSE_PASS.md  README.md  apply_defect_fixes_1_4_5.py  apply_empty_payload_guard.py  apply_engineering_excellence.sh  apply_live_api_test_fix.py  apply_ops_improvements.py  apply_season_end_fix.py  apply_tone_presets_v1.py  apply_trade_bullets_fix.py  apply_trade_name_resolution.py  ingest_all_seasons.py  pyproject.toml  requirements.txt  squadvault_defect2_phase_b_consumer_migration.patch  squadvault_engineering_excellence.patch  squadvault_ingest_eal_editorial_tests.patch  squadvault_phase_a_c_e_consumer_cleanup.patch  squadvault_phase_d_f_tests.patch  squadvault_phase_e_dedup.patch  squadvault_test_coverage_expansion.patch  squadvault_test_coverage_expansion_v2.patch
.local_audit/: docs_ext_counts.txt  docs_paths.txt
Tests/: _nac_check_assembly_plain_v1.py  conftest.py  test_approval_authority_v1_type_a.py  test_architecture_gates_v1.py  test_archive_layout_v1.py  test_auction_draft_angles_v1.py  test_budget_angles_rotation_v1.py  test_bye_week_context_v1.py  test_canonicalization_idempotency_property_v1.py  test_canonicalization_reconstructability_v1.py  test_canonicalize_v1.py  test_championship_timeline_aggregations_v1.py  test_championship_timeline_archive_layout_v1.py  test_championship_timeline_render_v1.py  test_chronicle_verifier_v1.py  test_competitive_rivalry.py  test_config_and_utils_v1.py  test_consumer_cli_smoke_v1.py  test_contract_validation_strategy_v1_type_a.py  test_core_queries_layer_boundary_v1.py  test_core_storage_utils_v1.py  test_creative_layer_player_highlights_v1.py  test_creative_layer_rivalry_v1.py  test_creative_layer_v1.py  test_creative_output_v1.py  test_creative_surface_registry_usage_gate_v1.py  test_data_depth_guardrails_v1.py  test_db_utils_migrate_errors_v1.py  test_defect5_migration_cli.py  test_defect_fixes_v1.py  test_deterministic_bullets_v1.py  test_docs_map_registration_gate_v1.py  test_draft_history_vault_aggregations_v1.py  test_draft_history_vault_archive_layout_v1.py  test_draft_history_vault_render_v1.py  test_duplicate_matchup_detection_v1.py  test_eal_calibration_v1.py  test_eal_consume_v1.py  test_eal_included_count_flow_v1.py  test_eal_window_independence_v1.py  (+117 more)
_observations/: ARCHITECTURAL_AUDIT_2026_04_16.md  DECIDE_LANE_CONTINUITY_MEMO_v1_0.md  OBSERVATIONS_2026_04_16_AUDIT_FOLLOW_UP.md  OBSERVATIONS_2026_04_16_WRITING_ROOM_SURFACING_AUDIT.md  OBSERVATIONS_2026_04_18_S10_LEAK4_RESOLUTION.md  OBSERVATIONS_2026_04_18_S10_SCOPE_CORRECTION.md  OBSERVATIONS_2026_04_18_STREAK_id7_SUPERSEDED.md  (+265 more)
docs/: STATE.md  (+19 more)
(+2192 files in other folders)
